Fix: illustrations not centred on small screens

--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -173,6 +173,11 @@ button {
     width: 100%;
   }
 
+  .illustration {
+    display: block;
+    margin: 0 auto;
+  }
+
 }
 
 ul, ol {
